fix: add ZohoMail server configuration support
- Add imap.zoho.eu and smtp.zoho.eu settings for zohomail.eu domain
- Include ZohoMail in provider info panel
- Support both zohomail.eu and zoho.com domains
- Resolves DNS lookup issues for ZohoMail users

--- a/templates/index.html
+++ b/templates/index.html
@@ -87,6 +87,11 @@
                         IMAP: imap.mail.yahoo.com:993<br>
                         SMTP: smtp.mail.yahoo.com:587
                     </div>
+                    <div class="provider">
+                        <strong>ZohoMail</strong><br>
+                        IMAP: imap.zoho.eu:993<br>
+                        SMTP: smtp.zoho.eu:587
+                    </div>
                 </div>
             </div>
         </main>
