--- a/templates/index.html
+++ b/templates/index.html
@@ -185,6 +185,10 @@
         </footer>
     </div>
 
+    <script src="/static/email-presets.js"></script>
+    <script src="/static/ui-utils.js"></script>
+    <script src="/static/form-handlers.js"></script>
+    <script src="/static/polling.js"></script>
     <script src="/static/app.js"></script>
 </body>
 </html>
